# HRR-MLBA-Project

./: .gitignore  .pre-commit-config.yaml  GIT_LFS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NON_PROGRAMMER_GUIDE.md  README.md  best_model.json  best_model_metadata.json  clustering_roles.py  data_preprocessing.py  feature_engineering.py  main.py  model_training.py  pipeline.py  pyproject.toml  requirements.txt  retrain_best_model.py  shap_analysis.py  streamlit_app.py  team_selection.py  visualization.py
.github/workflows/: ci.yml  retrain-model.yml  streamlit.yml
analysis/: __init__.py  error_slices.py  failures.py
cli/: __init__.py  calibrate.py  score_oos.py
configs/: policy.yaml
docs/: BUSINESS_KPIS.md  DATA_CARD.md  FEATURE_TIMING_AUDIT.md
splits/: __init__.py  time_splits.py
src/: __init__.py
src/common/: __init__.py  baselines.py  calibration.py  metrics.py  seeding.py  visualization.py
tests/: conftest.py  test_baselines.py  test_calibration.py  test_clustering_roles.py  test_feature_engineering.py  test_main.py  test_metrics.py  test_shap_xgboost_compat.py  test_streamlit_app.py  test_time_splits.py
